3.0.0-rc2
  - Row and column mapper for Optional types
  - Binding of nested attributes e.g. ":user.address.city" with @BindBean, @BindMethods,
    and @BindFields.

3.0.0-rc1
  - SQL Object methods may have a Consumer<T> instead of a return type. See
    http://jdbi.github.io/#_consumer_methods.

3.0.0-beta4
  - [breaking] ResultSetMapper -> ResultSetScanner; reducing overloaded 'Mapper'
  - PreparedBatch: throw an exception if you try to add() an empty binding
  - [breaking] Removed column mapper fallback behavior from
    StatementContext.findRowMapperFor() and RowMappers.findFor(), in favor or new
    StatementContext.findMapperFor() and Mappers.findFor() methods. Previously,
    findRowMapperFor() would first consult the RowMappers registry, then the
    ColumnMappers registry if no RowMapper was registered for a given type. Thus:
    - StatementContext.findMapperFor(...) or Mappers.findFor() may return a row mapper or
      a first-column mapper.
    - StatementContext.findRowMapperFor(...) or RowMappers.findFor() returns only row
      mappers
    - StatementContext.findColumnMapperFor(...) or ColumnMappers.findFor() returns only
      column mapper
  - [breaking] Renamed @SqlMethodAnnotation meta-annotation to @SqlOperation.
  - Added support for Vavr object-functional data types in jdbi3-vavr module.
  - java.time.ZoneId support

3.0.0-beta3
  - Added Kotlin extension methods to Jdbi class, to work around Kotlin's lack
    of support for exception transparency: withHandleUnchecked,
    useHandleUnchecked, inTransactionUnchecked, useTransactionUnchecked,
    withExtensionUnchecked, useExtensionUnchecked.
  - Renamed org.jdbi:jdbi3 artifact to org.jdbi:jdbi3-core, for consistency with
    other modules.
  - [breaking] StatementContext.getParsedSql() now returns a ParsedSql instead of String
  - [breaking] Remove SqlStatement fetchForward / Reverse ; statements now FORWARD_ONLY

3.0.0-beta2