@@ -2,6 +2,7 @@
   - Row and column mapper for Optional types
   - Binding of nested attributes e.g. ":user.address.city" with @BindBean, @BindMethods,
     and @BindFields.
+  - SQL Objects inherit class annotations from supertypes.
 
 3.0.0-rc1
   - SQL Object methods may have a Consumer<T> instead of a return type. See
